trunk/Archive2/90/6d2f1dce960c7f/output
main.cpp: In function 'int main()':
main.cpp:5:11: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   if(i = 7) // <- no Yoda sentance, checked by compiler
           ^
cc1plus: all warnings being treated as errors
